# FastAPI_template_with_user_management

./: .env.example  .ignorecontext  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/apps/: __init__.py
src/apps/admin/: admin_auth.py  admin_base.py
src/apps/admin/views/: user_view.py
src/apps/auth/: depends.py  handlers.py  managers.py  routes.py  schemas.py  services.py  tasks.py  utils.py
src/apps/profile/: managers.py  routes.py  schemas.py  services.py
src/core/: __init__.py  celery_config.py  settings.py
src/core/core_dependency/: db_dependency.py  redis_dependency.py
src/database/alembic/: env.py
src/database/alembic/versions/: 2026_04_02_1259-83bb3bddd32c_create_user_table.py  2026_04_02_1430-b196a599b840_test.py  2026_04_02_1839-31fcb0722697_links_model.py
src/database/mixins/: id_mixins.py
src/templates/: confirmation_email.html
