[project]
name = "FastAPITemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0,<5.0.0",
    "celery>=5.6.3",
    "context-analyzer>=0.1.3",
    "fastapi[standard]>=0.135.3",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "starlette-admin>=0.16.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
where = ["src"]